修改个人中心页面

--- a/html/personCenter.html
+++ b/html/personCenter.html
@@ -15,27 +15,44 @@
 </head>
 
 <body>
-    <header>
-        <ul class="left">
-            <li><a href="index.html">小米商城</a></li>
-            <li><a href="#">MIUI</a></li>
-            <li><a href="#">IoT</a></li>
-            <li><a href="#">云服务</a></li>
-            <li><a href="#">金融</a></li>
-            <li><a href="#">有品</a></li>
-            <li><a href="#">小爱开放平台</a></li>
-            <li><a href="#">企业团购</a></li>
-            <li><a href="#">资质证照</a></li>
-            <li><a href="#">协议规则</a></li>
-            <li><a href="#">下载app</a></li>
-        </ul>
-        <ul class="right">
-            <li><a href="./html/login.html">登录</a></li>
-            <li><a href="./html/register.html">注册</a></li>
-            <li><a href="#">消息通知</a></li>
-            <li><a href="#">购物车</a></li>
-        </ul>
-    </header>
+   <header>
+       <div>
+           <ul class="left">
+               <li><a href="index.html">小米商城</a></li>
+               <li><a href="#">MIUI</a></li>
+               <li><a href="#">IoT</a></li>
+               <li><a href="#">云服务</a></li>
+               <li><a href="#">金融</a></li>
+               <li><a href="#">有品</a></li>
+               <li><a href="#">小爱开放平台</a></li>
+               <li><a href="#">企业团购</a></li>
+               <li><a href="#">资质证照</a></li>
+               <li><a href="#">协议规则</a></li>
+               <li><a href="#">下载app</a></li>
+               <li><a href="#">Select Location</a></li>
+           </ul>
+
+           <div class="loginmsg">
+               <div class="shortcar">
+                   <i class="iconfont icon-gouwuche2"></i>
+                   <b>购物车</b>
+                   <span>(0)</span>
+                   <div class="shortlist">
+                       <p>购物车中还没有商品，赶紧选购吧</p>
+                       <ul></ul>
+                   </div>
+               </div>
+               <ul class="right">
+                   <li><a href="./html/login.html">登录</a></li>
+                   <li><a href="./html/register.html">注册</a></li>
+                   <li><a href="#">消息通知</a></li>
+               </ul>
+
+           </div>
+
+       </div>
+
+   </header>
 
     <div class="box">
         <div class="top">
